# RC2024

final/: CMakeLists.txt  README.md
final/inc/: OpencvHead.h  PCLHead.h  camera.h  detect.h  dnn.h  main.h  opencv.h  pointcloud.h  queue.h  uart.h
final/source/: can_send.cpp  seePLY.cpp
final/src/: camera.cpp  detect.cpp  dnn.cpp  main.cpp  opencv.cpp  pointcloud.cpp  queue.cpp  uart.cpp
final/src/application/app_yolo/: multi_gpu.cpp  yolo.cpp  yolo.hpp
final/src/application/tools/: auto_download.cpp
final/src/tensorRT/common/: ilogger.hpp
